--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "@hookform/resolvers": "^2.9.1",
     "@mantine/core": "^4.2.7",
     "@mantine/hooks": "^4.2.7",
     "@react-pdf-viewer/core": "^3.3.3",
