--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "framer-motion": "^6.3.4",
+    "markdown-to-jsx": "^7.1.7",
     "pdfjs-dist": "^2.14.305",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
